# reumadata-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  start.sh
reumadata_backend/: manage.py  pyproject.toml
reumadata_backend/core/: constants.py
reumadata_backend/core/fixtures/: districts.yaml  provinces.yaml  states.yaml
reumadata_backend/core/migrations/: 0001_initial.py  0002_auto_20210307_1910.py
reumadata_backend/core/models/: __init__.py  ethnicity.py  general.py  phone.py  ubigeo.py
reumadata_backend/lupus/models/: lupus.py  manifestacion_sistemica.py  mucocutaneo.py  muscoloesqueletico.py  neuropsiquiatrico.py  otorrinolaringologico.py  respiratorio.py
reumadata_backend/patient/: constants.py
reumadata_backend/patient/migrations/: 0001_initial.py
reumadata_backend/patient/models/: __init__.py  comorbidity.py  filiation.py  gynecological_history.py  patient.py
reumadata_backend/reumadata_backend/: asgi.py  settings.py  urls.py  wsgi.py
reumadata_backend/reumadata_backend/settings/: base.py  local.py
